--- a/myApp/www/lang/de.json
+++ b/myApp/www/lang/de.json
@@ -1,447 +1,80 @@
+{
 
-  {
+  "INDEX": {
+    "PAGETITLE_ID": "Internet's Chinatown",
+    "BACK":"Zurück"
+  },
 
-    "INDEX": {
-      "PAGETITLE_ID": "Internet's Chinatown",
-      "MAIN_ID":"Übersicht",
-      "QUIZ_ID":"Abfrage",
-      "FLASHCARDTABLE_ID":"Vokabelkarten",
-      "IMMERSION_ID":"Immersion",
-      "ACCOUNT_ID":"Konto",
-      "ABOUT_ID":"Impressum"
-    },
-    "LANGUAGES": {
-      "ENGLISH_ID":"englisch",
-      "GERMAN_ID":"deutsch"
-    },
+  "MENU": {
+    "MENU_ID":"Menü",
+    "HOME_ID":"Home",
+    "FLASHCARDS_ID":"Vokabelkarten",
+    "IMMERSION_ID":"Immersion",
+    "QUIZ_ID":"Quiz",
+    "ACCOUNT_ID":"Account",
+    "ABOUT_ID":"Impressum",
+    "SETTINGS_ID":"Einstellungen"
+  },
 
-    "FLASHCARDTABLE": {
-      "CHAPTER_ID": "Kapitel",
-      "ALL_ID":"Alle",
-      "SEARCH_ID": "Suche",
-      "CHARACTER_ID": "Schriftzeichen",
-      "PINYIN_ID": "Pinyin",
-      "TRANSLATION_ID": "Bedeutung"
-    },
-    "QUIZ":{
-      "CHARACTERQUIZ_ID":"Schriftzeichenabfrage",
-      "PINYINQUIZ_ID":"Pinyinabfrage",
-      "TRANSLATIONQUIZ_ID":"Übersetzungsabfrage",
-      "HARDCORETRANSLATIONQUIZ_ID":"Hardcore Schriftzeichenabfrage",
-      "CHARACTER_ID": "Schriftzeichen",
-      "PINYIN_ID": "Pinyin",
-      "TRANSLATION_ID": "Bedeutung",
-      "YES_ID":"Ja",
-      "NO_ID":"Nein",
-      "ALL_ID":"Alle",
-      "CHAPTER_ID": "Kapitel",
-      "KNOWN_ID":"Gewusst?",
-      "NEXT_ID":"weiter",
-      "BACK_ID":"zurück",
-      "ANSWER_ID":"Lösung"
-    },
+  "FLASHCARDTABLE": {
+    "CHAPTER_ID": "Kapitel",
+    "ALL_ID":"Alle",
+    "1_ID":"1 Einführung",
+    "2_ID":"2 Arbeit",
+    "3_ID":"3 Länder",
+    "4_ID":"4 Zählen",
+    "5_ID":"5 Hotel",
+    "6_ID":"6 Essen",
+    "7_ID":"7 Familie",
+    "8_ID":"8 Transportation",
+    "SEARCH_ID": "Suche",
+    "CHARACTER_ID": "Schriftzeichen",
+    "PINYIN_ID": "Pinyin",
+    "TRANSLATION_ID": "Übersetzung"
+  },
+  "QUIZ":{
+    "CHAPTER_ID": "Kapitel",
+    "ALL_ID":"Alle",
+    "1_ID":"1 Einführung",
+    "2_ID":"2 Arbeit",
+    "3_ID":"3 Länder",
+    "4_ID":"4 Zählen",
+    "5_ID":"5 Hotel",
+    "6_ID":"6 Essen",
+    "7_ID":"7 Familie",
+    "8_ID":"8 Transportation",
+    "CHARACTER_ID": "Schriftzeichen",
+    "PINYIN_ID": "Pinyin",
+    "TRANSLATION_ID": "Übersetzung",
+    "NEXT_ID":"nächste",
+    "BACK_ID":"vorherige",
+    "TURNCARD_ID":"Karte umdrehen",
 
-    "Immersion":{
+    "YES_ID":"Ja",
+    "NO_ID":"Nein",
+    "KNOWN_ID":"Hast du es rausgefunden?"
 
-      "youTubeChannels": "YouTube Kanäle",
-      "movies":"Filme",
-      "comedy":"Comedy",
-      "music":"Musik",
-      "talks":"Talks",
-      "podcasts":"Podcasts",
-      "books":"Bücher",
-      "cultureArt":"Kultur & Kunst",
-      "blogs":"Blogs",
-      "martialArts":"Kampfkünste",
-      "travel":"Reisen",
-      "products":"Produkte",
-      "philosophy":"Philosophie",
-      "other":"Andere Quellen",
+  },
 
+  "IMMERSION": {
+    "YOUTUBECHANNELS_ID": "YouTube Kanäle",
+    "MOVIES_ID": "Filme",
+    "COMEDY_ID": "Comedy",
+    "MUSIC_ID": "Musik",
+    "TALKS_ID": "Talks",
+    "PODCASTS_ID": "Podcasts",
+    "BOOKS_ID": "Bücher",
+    "CULTUREART_ID": "Kultur und Kunst",
+    "BLOGS_ID": "Blogs",
+    "MARTIALARTS_ID": "Kampfkunst",
+    "TRAVEL_ID": "Reisen",
+    "PRODUCTS_ID": "Produkte",
+    "PHILOSOPHY_ID": "Philosophie",
+    "OTHER_ID": "Andere Ressourcen"
+  },
 
-      "YOUTUBECHANNELS":{
-        "a-OffTheGreatWall":{
-          "title":"Off the Great Wall",
-          "description":"#Kultur #Essen #Geschichte #alltägliches Leben",
-          "lang":"en",
-          "link":"https://www.youtube.com/user/NTDOffTheGreatWall"
-        },
-        "a-LearnChineseNow":{
-          "title":"Learn Chinese Now",
-          "description":"#Kultur #Basics #Grammar #Advanced",
-          "lang":"en",
-          "link":"https://www.youtube.com/user/learnchinesenow"
-        },
-        "a-tolocat":{
-          "title":"Tolocat",
-          "description":"#gaming #taiwan",
-          "lang":"en",
-          "link":"https://www.youtube.com/user/tolocat"
-        },
-        "a-charlie615119":{
-          "title":"阿神",
-          "description":"#gaming #taiwan",
-          "lang":"en",
-          "link":"https://www.youtube.com/user/charlie615119"
-        },
-        "a-SmallM":{
-          "title":"SmallM",
-          "description":"#gaming #taiwan",
-          "lang":"en",
-          "link":"https://www.youtube.com/user/SmAllM1987914"
-        },
-        "a-ChinaUncensored":{
-          "title":"China Uncensored",
-          "description":"#Politik #Nachrichten",
-          "lang":"en",
-          "link":"https://www.youtube.com/channel/UCgFP46yVT-GG4o1TgXn-04Q"
-        },
-        "a-Laowai":{
-          "title":"A Laowai's View of China & Taiwan",
-          "description":"#alles",
-          "lang":"en",
-          "link":"https://www.youtube.com/user/Laowaikanzhongguo"
-        },
-        "a-DoubleChen":{
-          "title":"Double Chen",
-          "description":"#Essen #Kultur #Geschichte",
-          "lang":"en",
-          "link":"https://www.youtube.com/channel/UCTea-f-qnRoBFKUXCMaZVtQ"
-        },
-        "a-StrictlyDumpling":{
-          "title":"Strictly Dumpling",
-          "description":"#food",
-          "lang":"en",
-          "link":"https://www.youtube.com/channel/UCXOKEdfOFxsHO_-Su3K8SHg"
-        },
-        "a-":{
-          "title":"",
-          "description":"",
-          "lang":"en",
-          "link":""
-        }
-
-
-      },
-      "MOVIES":{
-        "a-impetousLove":{
-          "title":"Impetuous Love",
-          "description":"#romantische Komödie #Untertitel #Übersetzung #martial arts",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=Kl6Lsxez2e4"
-        },
-        "a-":{
-          "title":"",
-          "description":"",
-          "lang":"en",
-          "link":""
-        },
-        "a-":{
-          "title":"",
-          "description":"",
-          "lang":"en",
-          "link":""
-        },
-        "a-":{
-          "title":"",
-          "description":"",
-          "lang":"en",
-          "link":""
-        }
-      },
-      "COMEDY":{
-        "a-frenchCoWorker":{
-          "title":"My French Co-Worker",
-          "description":"#comedy #shanghai #stand up",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=6Wj7xB-is7A"
-        },
-        "a-DashanStandUpBeijing":{
-          "title":"Dashan Stand-Up in Beijing",
-          "description":"#comedy #chinesisch #Untertitel #stand up",
-          "lang":"cn",
-          "link":"https://www.youtube.com/watch?v=mnfHDV8Gl0A"
-        },
-        "a-ChineseNewYear":{
-          "title":"Chinese New Year",
-          "description":"#comedy #stand up",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=aa7ZHR5ZHpc"
-        },
-        "a-DashanLive":{
-          "title":"Dashan Live: 想入非非",
-          "description":"#comedy #chinesisch #Untertitel #stand up",
-          "lang":"cn",
-          "link":"https://www.youtube.com/watch?v=Y9KLjy47eu0"
-        },
-        "a-AndyCurtain":{
-          "title":"Andy Curtain Kung Fu Komedy",
-          "description":"#comedy #stand up",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=NbxiKK_1MZw"
-        }
-      },
-      "MUSIC":{
-        "a-MingPalace":{
-          "title":"The Ming Palace (Tang Dynasty)",
-          "description":"#traditional",
-          "lang":"cn",
-          "link":"https://www.youtube.com/watch?annotation_id=annotation_3797695309&feature=iv&src_vid=SoSIpWbqS60&v=9qtwPKCbbik"
-        },
-        "a-mongolian1":{
-          "title":"乌兰托娅 套马杆(高清)",
-          "description":"#traditional #mongolian",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=pM2w6MzMsac"
-        },
-        "a-mongolian2":{
-          "title":"凤凰传奇 最炫民族风",
-          "description":"#modern #traditional",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=Ynypvs5s75Y"
-        },
-        "a-traditional1":{
-          "title":"降央卓玛 走天涯 高凊版（清晰）",
-          "description":"#traditional",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=L6OLTpRV_q8"
-        },
-        "a-traditional2":{
-          "title":"Wulan Tuoya - I want to Go to Xi Zang（Tibet）",
-          "description":"#tibet #traditional",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=ZaGUQq7C1jQ"
-        },
-        "a-Hero of China":{
-          "title":"Wong Fei Hung - Hero of China",
-          "description":"#Jet Li #martial arts #traditional",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=G5XYq7T2uQY"
-        },
-        "a-NanziHan":{
-          "title":"Jackie Chan - nánzǐ hàn (Mulan Song)",
-          "description":"#jackie chan #disney #martial arts",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=XLNgvNllU58"
-        },
-        "a-youCaiHua":{
-          "title":"You Cai Hua - Jackie Chan (Little Big Soldier Song)",
-          "description":"#jackie chan #lyrics in the comments",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=uhklgLmcl8k"
-        },
-        "a-genDequan":{
-          "title":"Gen Dequan - The Phoenix-Tail Bamboo in the Moonlight",
-          "description":"#dai #hulusi #traditional #no lyrics",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=Pq__l3woizM"
-        },
-        "a-mayDay":{
-          "title":"Mayday五月天 乾杯Cheers",
-          "description":"#mayday #modern",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=qX2GsMj7154&index=27"
-        },
-        "a-andyLau1":{
-          "title":"笨小孩 劉德華",
-          "description":"#Andy Lau #modern",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=NEOGrv0PK0Q"
-        },
-        "a-911-1":{
-          "title":"玖壹壹(Nine one one)-明天再擱來 (官方MV首播)",
-          "description":"#911 #modern #traditional characters #taiwan #taiwanese (mixed in)",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=D3cLm-AuMU0"
-        },
-        "a-911-2":{
-          "title":"玖壹壹(Nine one one)-嘻哈庄腳情 官方MV首播",
-          "description":"#911 #modern #traditional characters #taiwan #taiwanese (mixed in) #set to 1.25x speed",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=JvkqZrYJUe8"
-        },
-        "a-langLangAutumn":{
-          "title":"Lang Lang -﻿ Autumn Moon on a Calm Lake (平湖秋月)",
-          "description":"#piano #Lang Lang #traditional",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=gwZSkrCAJAY"
-        }
-      },
-      "TALKS":{},
-      "PODCASTS":{
-        "a-TheChinaHistoryPodcast":{
-          "title":"The China History Podcast",
-          "description":"#Geschichte",
-          "lang":"en",
-          "link":"http://chinahistorypodcast.com/"
-        },
-        "a-SlowChinese":{
-          "title":"Slow Chinese",
-          "description":"#Geschichte #Reisen #Modernes China #Skripte mit Übersetzung auf Website",
-          "lang":"en",
-          "link":"http://www.slow-chinese.com/"
-        },
-        "a-PopUpChinese":{
-          "title":"Popup Chinese",
-          "description":"#strukturiert #Diskussionen #zweisprachig #Kultur #Erklärungen",
-          "lang":"en",
-          "link":"http://www.popupchinese.com/"
-        }
-      },
-      "BOOKS":{
-        "a-TaoTeChing":{
-          "title":"Tao Te Ching",
-          "description":"#hörbuch #Lao Tzu #Taoism",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=yc4zQunNBaM"
-        },
-        "a-SunTzu_de":{
-          "title":"Sun Tzu",
-          "description":"#hörbuch #deutsch #Sun Tzu #Die Kunst des Krieges",
-          "lang":"de",
-          "link":"https://www.youtube.com/watch?v=t9OnkDYR8sY"
-        },
-        "a-SunTzu_en":{
-          "title":"Sun Tzu",
-          "description":"#hörbuch #englisch #Sun Tzu #Die Kunst des Krieges",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=31j43R77tOc"
-        },
-        "a-TaiPan":{
-          "title":"Tai-Pan",
-          "description":"#James Clavell #Asian Saga #2 #Hongkong #1840s",
-          "lang":"en",
-          "link":"https://www.goodreads.com/book/show/42933.Tai_Pan"
-        },
-        "a-OnChina":{
-          "title":"On China",
-          "description":"#Henry Kissinger #history #politics #culture",
-          "lang":"en",
-          "link":"https://www.goodreads.com/book/show/9328314-on-china?from_search=true&search_version=service"
-        },
-        "a-Daomu":{
-          "title":"Dàomù bǐjì",
-          "description":"#novel #online #tomb raider #盗墓笔记 #chinese",
-          "lang":"en",
-          "link":"http://www.idaomu.com/"
-        },
-        "a-wuxia":{
-          "title":"wuxiaworld",
-          "description":"#novels #online #translation #various",
-          "lang":"en",
-          "link":"http://www.wuxiaworld.com/"
-        },
-        "a-":{
-          "title":"",
-          "description":"",
-          "lang":"en",
-          "link":""
-        }
-      },
-      "CULTUREART":{},
-      "BLOGS":{
-        "a-learningStrategies":{
-          "title":"Language learning Strategies",
-          "description":"#strategies",
-          "lang":"en",
-          "link":"http://www.fluentin3months.com/language-learning-strategies/"
-        },
-        "a-grammarRules":{
-          "title":"Grammar Rules",
-          "description":"#grammar",
-          "lang":"en",
-          "link":"https://www.chineseboost.com/grammar/chinese-grammar-rules/"
-        },
-        "a-allsetlearning-grammar":{
-          "title":"ChineseGrammarWiki",
-          "description":"#collection #grammar",
-          "lang":"en",
-          "link":"https://resources.allsetlearning.com/chinese/grammar/"
-        },
-        "a-r/China":{
-          "title":"r/China",
-          "description":"#reddit",
-          "lang":"en",
-          "link":"https://www.reddit.com/r/China/"
-        },
-        "a-r/Chinese":{
-          "title":"r/Chinese",
-          "description":"#reddit",
-          "lang":"en",
-          "link":"https://www.reddit.com/r/Chinese/"
-        },
-        "a-r/ChineseLanguage":{
-          "title":"r/ChineseLanguage",
-          "description":"#reddit",
-          "lang":"en",
-          "link":"https://www.reddit.com/r/ChineseLanguage"
-        }
-      },
-      "MARTIALARTS":{
-        "a-WingChunTaiChi":{
-          "title":"Wing Chun Tai Chi JKD - Master Wong",
-          "description":"#martial arts #tai chi #selfdefence #basics #advanced",
-          "lang":"en",
-          "link":"https://www.youtube.com/channel/UC2NH07Y5tx_PQvqaQGzxKxQ"
-        }
-      },
-      "TRAVEL":{},
-      "PRODUCTS":{},
-      "PHILOSOPHY":{
-        "a-alanAsia":{
-          "title":"Alan Watts - Philosophies Of Asia - Intro to Buddhism [1 Of 2]",
-          "description":"#Alan Watts #Buddhismus",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=g09Xq0YmzdA"
-        },
-        "a-alanZen":{
-          "title":"Alan Watts: Zen",
-          "description":"#Alan Watts #Zen",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=Qy4VWA2jsQA"
-        },
-        "a-alanLaoTzu":{
-          "title":"Alan Watts - Lao Tzu's Tao Te Ching",
-          "description":"#Alan Watts #Daoismus",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=NEIuPDvJMss"
-        },
-        "a-alanZenTales":{
-          "title":"Alan Watts - Eastern & Western Zen: Zen Tales and Legends",
-          "description":"#Alan Watts #Zen #Legenden",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=FF-wKPKSjCc"
-        },
-        "a-alanTaoist":{
-          "title":"Alan Watts - The Taoist Way",
-          "description":"#Alan Watts #Daoismus",
-          "lang":"en",
-          "link":"https://www.youtube.com/watch?v=Iv9zocKASsM"
-        }
-      },
-      "OTHER":{
-        "a-TravelInChinese":{
-          "title":"Travel in Chinese",
-          "description":"#Sprachkurs #Dashan #100 Episoden #hohe Qualität",
-          "lang":"en",
-          "link":"http://english.cntv.cn/program/learnchinese/travelinchinese/index.shtml"
-        },
-        "a-GrowingUpWithChinese":{
-          "title":"Growing up with Chinese",
-          "description":"#Sprachkurs #100 Episoden #hohe Qualität",
-          "lang":"en",
-          "link":"http://english.cntv.cn/program/learnchinese/growingwithchinese/index.shtml"
-        }
-      }
-
-    }
-
+  "SETTINGS": {
+    "LANGUAGE_ID":"Sprache"
   }
 
-
-
-
-
-
-
-
+}
