--- a/myApp/www/lang/en.json
+++ b/myApp/www/lang/en.json
@@ -65,7 +65,7 @@
       "TALKS_ID": "Talks",
       "PODCASTS_ID": "Podcasts",
       "BOOKS_ID": "Books",
-      "CULTUREART_ID": "Culture & Art",
+      "CULTUREART_ID": "Culture and Art",
       "BLOGS_ID": "Blogs",
       "MARTIALARTS_ID": "Martial Arts",
       "TRAVEL_ID": "Travel",
