--- a/myApp/www/lang/de.json
+++ b/myApp/www/lang/de.json
@@ -28,6 +28,14 @@
     "6_ID":"6 Essen",
     "7_ID":"7 Familie",
     "8_ID":"8 Transportation",
+    "9_ID":"9 Kleidung",
+    "10_ID":"10 Lernen",
+    "11_ID":"11 Hobbys",
+    "12_ID":"12 Feste",
+    "13_ID":"13 Verkehr",
+    "14_ID":"14 Wetter",
+    "15_ID":"15 Arzt",
+    "16_ID":"16 Büro",
     "SEARCH_ID": "Suche",
     "CHARACTER_ID": "Schriftzeichen",
     "PINYIN_ID": "Pinyin",
@@ -44,6 +52,14 @@
     "6_ID":"6 Essen",
     "7_ID":"7 Familie",
     "8_ID":"8 Transportation",
+    "9_ID":"9 Kleidung",
+    "10_ID":"10 Lernen",
+    "11_ID":"11 Hobbys",
+    "12_ID":"12 Feste",
+    "13_ID":"13 Verkehr",
+    "14_ID":"14 Wetter",
+    "15_ID":"15 Arzt",
+    "16_ID":"16 Büro",
     "CHARACTER_ID": "Schriftzeichen",
     "PINYIN_ID": "Pinyin",
     "TRANSLATION_ID": "Übersetzung",
