--- a/myApp/www/lang/en.json
+++ b/myApp/www/lang/en.json
@@ -29,6 +29,14 @@
       "6_ID":"6 Food",
       "7_ID":"7 Family",
       "8_ID":"8 Transportation",
+      "9_ID":"9 Clothing",
+      "10_ID":"10 Learning",
+      "11_ID":"11 Hobbys",
+      "12_ID":"12 Festivals",
+      "13_ID":"13 Travel",
+      "14_ID":"14 Weather",
+      "15_ID":"15 Health",
+      "16_ID":"16 Business",
       "SEARCH_ID": "Search",
       "CHARACTER_ID": "Character",
       "PINYIN_ID": "Pinyin",
@@ -45,6 +53,14 @@
       "6_ID":"6 Food",
       "7_ID":"7 Family",
       "8_ID":"8 Transportation",
+      "9_ID":"9 Clothing",
+      "10_ID":"10 Learning",
+      "11_ID":"11 Hobbys",
+      "12_ID":"12 Festivals",
+      "13_ID":"13 Travel",
+      "14_ID":"14 Weather",
+      "15_ID":"15 Health",
+      "16_ID":"16 Business",
       "CHARACTER_ID": "Character",
       "PINYIN_ID": "Pinyin",
       "TRANSLATION_ID": "Translation",
